unpackaged/main/default/objects/Media_Targeting_Widget_Sections__c/Media_Targeting_Widget_Sections__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Media Targeting Widget Sections</label>
</CustomObject>