unpackaged/main/default/objects/Media_Targeting_Widget_Sections__c/fields/Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Name__c</fullName>
    <label>Attribute Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>