unpackaged/main/default/objects/Media_Targeting_Widget_Sections__c/fields/Auto_Update_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Auto_Update_Configuration__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto Update Configuration</label>
    <type>Checkbox</type>
</CustomField>