unpackaged/main/default/objects/Media_Targeting_Widget_Sections__c/fields/Include_Exclude_Logic_Type__c.field-meta.xml
<CustomField>
    <fullName>Include_Exclude_Logic_Type__c</fullName>
    <label>Include Exclude Logic Type</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>