unpackaged/main/default/objects/Media_Targeting_Widget_Sections__c/fields/Parent_Section__c.field-meta.xml
<CustomField>
    <fullName>Parent_Section__c</fullName>
    <label>Parent Section</label>
    <length>50</length>
    <type>Text</type>
</CustomField>