unpackaged/main/default/objects/Media_Targeting_Widget_Sections__c/fields/Tabs_List__c.field-meta.xml
<CustomField>
    <fullName>Tabs_List__c</fullName>
    <description>CSV</description>
    <inlineHelpText>CSV</inlineHelpText>
    <label>Tabs List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>